# QinemaTic5

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindROOT.cmake  findROOT.cmake
exec/: RootKinCalc  RootKinDict_rdict.pcm
include/: CalcMonitor.h  ExecKinCalcQt.h  kinematic.h  kinematicLinkDef.h
qcustomplot/source/: CMakeLists.txt
share/: images-resources.qrc
source/: CMakeLists.txt  CalcMonitor.cxx  ExecKinCalc.cxx  ExecKinCalcQt.cxx  kinematic.cxx
widgets/include/: QZMainframe.h  QZPlotwidget.h
widgets/source/: CMakeLists.txt  QZMainframe.cxx  QZMainframe.ui  QZPlotwidget.cxx  QZPlotwidget.ui
